add /api/check-liveness/v1 endpoint
This is useful for load balancers to determine when service
is available and ready to receive messages
