# docs/reference/kumod.openapi.json
@@ -6,7 +6,7 @@
     "license": {
       "name": "Apache-2.0"
     },
-    "version": "2024.06.24-cdcb2438"
+    "version": "2024.07.30-b5596183"
   },
   "paths": {
     "/api/admin/bounce/v1": {
@@ -341,6 +341,24 @@
           },
           "404": {
             "description": "Suspension either expired or was never valid"
+          }
+        }
+      }
+    },
+    "/api/check-liveness/v1": {
+      "get": {
+        "tags": [
+          "liveness"
+        ],
+        "summary": "Useful for load balancers to determine when service is available",
+        "description": "and ready to receive messages",
+        "operationId": "check_liveness_v1",
+        "responses": {
+          "200": {
+            "description": "ready to accept messages"
+          },
+          "503": {
+            "description": "service is not currently available"
           }
         }
       }
